[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "courselink-grader"
version = "0.1.0"
description = "CourseLink CSV grading helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich>=14.1.0",
    "typer>=0.24.1",
]

[project.scripts]
CourseLink_Helper = "course_link_helper.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
